should fix the bug on iPhone X with the About Us photo

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -590,6 +590,7 @@
 
 #aboutUsPhoto {
   max-width: 225px;
+  max-height: 153px;
 }
 
 #aboutUsWhiteContainer {
@@ -710,6 +711,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
+  width: 80%;
 }
 
 #careerPhotoContainer {
